<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">NoteTonSTA-Android</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="field_title">Title:</string>
    <string name="field_subject">Subject:</string>
    <string name="field_description">Description:</string>
    <string name="InterventionScreenTitle">Interventions</string>
    <string name="MainTitleScreen">Select a campus</string>
    <string name="InterventionDetailTitleScreen">Intervention Details</string>
    <string name="interventionEvaluateTitleScreen">Evaluate</string>
    <string name="field_nb_mark">Number of mark:</string>
    <string name="slide_mark">Slide Mark:</string>
    <string name="speaker_mark">Speaker Mark:</string>
    <string name="global_mark">Global Mark:</string>
    <string name="field_campus">Campus:</string>
    <string name="evaluate_button">Evaluate</string>
    <string name="eval_about_speaker_section">About The Speaker</string>
    <string name="eval_about_slide_section">About The Slide</string>
    <string name="eval_about_speaker_q1">His knowledge of the subject</string>
    <string name="eval_about_speaker_q2">His knowledge teaching abilities:</string>
    <string name="eval_about_speaker_q3">The quality of answers:</string>
    <string name="eval_about_slide_q1">The richness of the content :</string>
    <string name="eval_about_slide_q2">The format / layout:</string>
    <string name="eval_about_slide_q3">The examples:</string>
    <string name="hint_idbooster">Your ID Booster</string>
    <string name="hint_comment">Write a comment</string>
	<string name="empty_campus_list">No Campus</string>
	<string name="empty_intervention_list">No Intervention found</string>
</resources>