<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10px" >

    <include
        android:layout_width="wrap_content"
        layout="@layout/header" />

    <ScrollView
        android:id="@+id/evalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eee"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <EditText
                    android:id="@+id/idbooster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_idbooster"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/eval_about_speaker_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/eval_about_speaker_section"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_speaker_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_speaker_q1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q1"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_speaker_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_speaker_q2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q2"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_speaker_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_speaker_q3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q3"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:id="@+id/eval_about_slide_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/eval_about_slide_section"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_slide_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_slide_q1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q4"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_slide_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_slide_q2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q5"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <TextView
                    android:id="@+id/eval_about_slide_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eval_about_slide_q3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RatingBar
                    android:id="@+id/q6"
                    style="@style/styleRatingBarEval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                style="@style/field_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10px" >

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_comment"
                    android:inputType="textLongMessage|textMultiLine"
                    android:lines="5"
                    android:singleLine="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>